--- a/components/Project.module.css
+++ b/components/Project.module.css
@@ -1,5 +1,12 @@
+.link {
+  display: block;
+  position: relative;
+}
+
 .name {
   position: absolute;
+  left: 1rem;
+  top: 0.5rem;
   color: var(--color-dark);
 }
 
