--- a/pages/index.module.css
+++ b/pages/index.module.css
@@ -1,3 +1,13 @@
+.container {
+  display: grid;
+}
+
+@media screen and (min-width: 768px) {
+  .container {
+    grid-template-columns: 1fr 1fr;
+  }
+}
+
 .projects {
   display: grid;
   gap: 1em;
