--- a/pages/index.module.css
+++ b/pages/index.module.css
@@ -1,9 +1,10 @@
 .container {
-  display: grid;
+  height: 100%;
 }
 
 @media screen and (min-width: 768px) {
   .container {
+    display: grid;
     grid-template-columns: 1fr 1fr;
   }
 }
