Fix desktop styling (#2)
* Create two columns when on desktop

* Fix links justify

* Remove global scalable font-size

* Fix vertical centering issue

* Fix the size of the Business Card

* Make the projects scroll on their own

--- a/components/BusinessCard.module.css
+++ b/components/BusinessCard.module.css
@@ -1,13 +1,13 @@
 .container {
   display: grid;
   place-content: center;
-  height: 90vh;
+  height: 100%;
+  font-size: min(5vw, 1.5em);
 }
 
 .links {
   display: flex;
-  justify-content: center;
-  gap: 5vw;
+  justify-content: space-between;
 }
 
 .links > a {
