--- a/app/globals.scss
+++ b/app/globals.scss
@@ -1,3 +1,5 @@
+@use 'colors';
+
 html,
 body,
 h1 {
@@ -10,15 +12,9 @@ body {
   height: 100%;
 }
 
-/* Color definitions */
 :root {
-  --background: #0d1117;
-  --high-contrast: whitesmoke;
-}
-
-:root {
-  background: var(--background);
-  color: var(--high-contrast);
+  background: colors.$background;
+  color: colors.$high-contrast;
 
   font-size: 5vw;
 }
