Use colors in BusinessCard

--- a/components/BusinessCard.module.scss
+++ b/components/BusinessCard.module.scss
@@ -1,3 +1,5 @@
+@use '/app/colors';
+
 .container {
   display: grid;
   place-content: center;
@@ -25,7 +27,7 @@
       height="24"\
       viewBox="0 0 24 24"\
       fill="none"\
-      stroke="rgb(245, 245, 245)"\
+      stroke="#{colors.$high-contrast}"\
       stroke-width="2"\
       stroke-linecap="round"\
       stroke-linejoin="round"\
@@ -50,7 +52,7 @@
       height="24"\
       viewBox="0 0 24 24"\
       fill="none"\
-      stroke="rgb(245, 245, 245)"\
+      stroke="#{colors.$high-contrast}"\
       stroke-width="2"\
       stroke-linecap="round"\
       stroke-linejoin="round"\
@@ -72,7 +74,7 @@
       height="24"\
       viewBox="0 0 24 24"\
       fill="none"\
-      stroke="rgb(245, 245, 245)"\
+      stroke="#{colors.$high-contrast}"\
       stroke-width="2"\
       stroke-linecap="round"\
       stroke-linejoin="round"\
