Create light and dark color-scheme colors

--- a/app/colors.scss
+++ b/app/colors.scss
@@ -1,2 +1,5 @@
-$background: #0d1117;
-$high-contrast: whitesmoke;
+$background-light: whitesmoke;
+$high-contrast-light: #0d1117;
+
+$background-dark: #0d1117;
+$high-contrast-dark: whitesmoke;
