--- a/app/globals.scss
+++ b/app/globals.scss
@@ -13,8 +13,8 @@ body {
 }
 
 :root {
-  background: colors.$background;
-  color: colors.$high-contrast;
+  background: colors.$background-dark;
+  color: colors.$high-contrast-dark;
 
   font-size: 5vw;
 }
