--- a/components/BusinessCard.module.scss
+++ b/components/BusinessCard.module.scss
@@ -27,7 +27,7 @@
       height="24"\
       viewBox="0 0 24 24"\
       fill="none"\
-      stroke="#{colors.$high-contrast}"\
+      stroke="#{colors.$high-contrast-dark}"\
       stroke-width="2"\
       stroke-linecap="round"\
       stroke-linejoin="round"\
@@ -52,7 +52,7 @@
       height="24"\
       viewBox="0 0 24 24"\
       fill="none"\
-      stroke="#{colors.$high-contrast}"\
+      stroke="#{colors.$high-contrast-dark}"\
       stroke-width="2"\
       stroke-linecap="round"\
       stroke-linejoin="round"\
@@ -74,7 +74,7 @@
       height="24"\
       viewBox="0 0 24 24"\
       fill="none"\
-      stroke="#{colors.$high-contrast}"\
+      stroke="#{colors.$high-contrast-dark}"\
       stroke-width="2"\
       stroke-linecap="round"\
       stroke-linejoin="round"\
