--- a/app/icons.scss
+++ b/app/icons.scss
@@ -1,6 +1,6 @@
 @use '/app/colors';
 
-@function github() {
+@function github($color-scheme-dark) {
   @return url('data:image/svg+xml,\
     <svg\
       xmlns="http://www.w3.org/2000/svg"\
@@ -8,7 +8,7 @@
       height="24"\
       viewBox="0 0 24 24"\
       fill="none"\
-      stroke="#{colors.$high-contrast-dark}"\
+      stroke="#{colors.high-contrast($color-scheme-dark)}"\
       stroke-width="2"\
       stroke-linecap="round"\
       stroke-linejoin="round"\
@@ -25,7 +25,7 @@
   ');
 }
 
-@function linkedin() {
+@function linkedin($color-scheme-dark) {
   @return url('data:image/svg+xml,\
     <svg\
       xmlns="http://www.w3.org/2000/svg"\
@@ -33,7 +33,7 @@
       height="24"\
       viewBox="0 0 24 24"\
       fill="none"\
-      stroke="#{colors.$high-contrast-dark}"\
+      stroke="#{colors.high-contrast($color-scheme-dark)}"\
       stroke-width="2"\
       stroke-linecap="round"\
       stroke-linejoin="round"\
@@ -47,7 +47,7 @@
     </svg>');
 }
 
-@function instagram() {
+@function instagram($color-scheme-dark) {
   @return url('data:image/svg+xml,\
     <svg\
       xmlns="http://www.w3.org/2000/svg"\
@@ -55,7 +55,7 @@
       height="24"\
       viewBox="0 0 24 24"\
       fill="none"\
-      stroke="#{colors.$high-contrast-dark}"\
+      stroke="#{colors.high-contrast($color-scheme-dark)}"\
       stroke-width="2"\
       stroke-linecap="round"\
       stroke-linejoin="round"\
