Switch dark definition to hsl

--- a/app/colors.scss
+++ b/app/colors.scss
@@ -1,7 +1,7 @@
 $background-light: whitesmoke;
-$high-contrast-light: #0d1117;
+$high-contrast-light: hsl(216, 28%, 7%);
 
-$background-dark: #0d1117;
+$background-dark: hsl(216, 28%, 7%);
 $high-contrast-dark: whitesmoke;
 
 @function high-contrast($color-scheme-dark) {
