Extend CSS resets

--- a/app/globals.scss
+++ b/app/globals.scss
@@ -2,7 +2,10 @@
 
 html,
 body,
-h1 {
+h1,
+h2,
+ul,
+li {
   padding: 0;
   margin: 0;
 }
@@ -29,4 +32,8 @@ body {
   color: var(--high-contrast);
 
   font-size: 5vw;
+}
+
+ul {
+  list-style: none;
 }
