--- a/app/globals.scss
+++ b/app/globals.scss
@@ -2,8 +2,6 @@
 
 html,
 body,
-h1,
-h2,
 ul,
 li {
   padding: 0;
@@ -34,4 +32,8 @@ body {
 
 ul {
   list-style: none;
+}
+
+a {
+  color: inherit;
 }
