--- a/components/Assistant.module.scss
+++ b/components/Assistant.module.scss
@@ -1,3 +1,20 @@
+@use '/app/colors';
+
 .container {
   height: 100%;
+  padding: 2rem;
+}
+
+.messages {
+  list-style-type: none;
+  gap: 1rem;
+  display: grid;
+}
+
+.input {
+  border-radius: 0.5rem;
+  background-color: inherit;
+  border: 1px solid var(--high-contrast);
+  padding: 0.5rem 0.75rem;
+  outline: none;
 }
