--- a/components/Assistant.module.scss
+++ b/components/Assistant.module.scss
@@ -3,11 +3,18 @@
 .container {
   height: 100%;
   padding: 2rem;
+  display: grid;
+  grid-template-rows: 1fr auto;
 }
 
 .messages {
   list-style-type: none;
   gap: 1rem;
+  display: grid;
+  align-content: start;
+}
+
+.form {
   display: grid;
 }
 
