--- a/components/Assistant.module.scss
+++ b/components/Assistant.module.scss
@@ -24,7 +24,7 @@
 .input {
   border-radius: 0.5rem;
   background-color: inherit;
-  border: 1px solid var(--high-contrast);
+  border: 1px solid var(--low-contrast);
   padding: 0.5rem 0.75rem;
   outline: none;
   font-size: inherit;
