--- a/components/BusinessCard.module.scss
+++ b/components/BusinessCard.module.scss
@@ -1,26 +1,23 @@
 @use '/styles/colors';
 
 .container {
-  display: grid;
+  display: flex;
+  flex-direction: column;
   place-content: center;
   place-items: center;
   height: 100%;
   font-size: 1.5rem;
-  grid-template-areas:
-    'portrait'
-    'rest';
 }
 
 @media screen and (min-width: 60rem) {
   .container {
-    grid-template-areas: 'rest portrait';
+    flex-direction: row-reverse;
     gap: 6rem;
     font-size: 2rem;
   }
 }
 
 .portrait {
-  grid-area: portrait;
   border: 3px solid var(--high-contrast);
   border-radius: 60% 40% 30% 70%/60% 30% 70% 40%;
   animation: morph 8s ease-in-out infinite;
